<resources>
    <string name="app_name">DSR</string>
    <string name="shree_bhagyalakshmi_enterprises">Shree BhagyaLakshmi Enterprises</string>

    <string name="signIn">SIGN IN</string>
    <string name="logIn">Log In</string>
    <string name="forgot_your_pass">Forgot your password ?</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>

    <string name="emptyUsername">Username should not be Empty.</string>
    <string name="emptyPassword">Password should not be Empty.</string>
    <string name="minPassword">Password length is too short.</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="since_1972">since 1972</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="menu_retailer_list">Retailer Visit</string>
    <string name="menu_distributor_list">Distributor List</string>
    <string name="menu_sales_order">Sales Order</string>
    <string name="menu_retailer_master">Retailer Master</string>
    <string name="my_cart">My Cart</string>
    <string name="orders_summary">Orders/Summary</string>
    <string name="menu_distributor_ptr">Distributor PTR</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="date">Date</string>
    <string name="dateValue">DD/MM/YYYY</string>
    <string name="add_visit">Add Visit</string>
    <string name="no">No</string>
    <string name="delete_alert">Are you sure to delete this record ?</string>
    <string name="yes">Yes</string>
    <string name="remarks">Remarks: </string>
    <string name="remarks2">Remarks </string>
    <string name="retailer">Retailer: </string>
    <string name="retailer2">Retailer</string>
    <string name="beat_name">Beat Name: </string>
    <string name="beat_name2">Beat Name</string>
    <string name="ok">OK</string>

    <string name="gps_settings">Location Required!!</string>
    <string name="gps_settings_desc">Please enable Location settings</string>

    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="connection_to_server_lost">Connection to Server lost!!</string>
    <string name="checkYourConnection">Check Your Connection</string>
    <string name="do_you_want_to_logout">Do you really want to Logout ?</string>
    <string name="distributor">Distributor</string>
    <string name="distributor_id">Distributor Id</string>
    <string name="buy_from_sbl_shop">Buy From SBL Shop</string>
    <string name="retailer_id">Retailer Id</string>
    <string name="retailer_name">Retailer Name</string>
    <string name="retailer_name2">Retailer Name:</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="note">Note</string>
    <string name="submit">Submit</string>
    <string name="capture_location">Capture Location</string>
    <string name="phone_no">Phone No:</string>
    <string name="transaction_no">Transaction No.</string>
    <string name="salesman">Salesman</string>
    <string name="category">Category</string>
    <string name="price">Item Price:</string>
    <string name="price_code">Price Code</string>
    <string name="log_in">LOG IN</string>
    <string name="total_tonnage">Total Tonnage</string>
    <string name="_100">100</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="select_distributor_name">Select Distributor Name</string>
    <string name="select_beat_name">Select Beat Name</string>
    <string name="select_retailer_name">Select Retailer Name</string>
    <string name="select_category_name">Select Category Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_registered_username_so_nwe_can_send_otp_on_e_mail_for_password_reset">Please enter your registered username, so we can send OTP on e-mail for password reset</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="emptyOTP">please enter OTP</string>
    <string name="add_retailer">Add Retailer</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="area_name">Area Name</string>
    <string name="state_name">State Name</string>
    <string name="gstin">GSTIN</string>
    <string name="classification">Classification</string>
    <string name="retailer_type">Retailer Type</string>
    <string name="overall_price">Overall Price:</string>
    <string name="net_amount">Net Amount:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_added">Item Added</string>
    <string name="custom_price">Custom Price</string>
    <string name="clear_all">clear All</string>
    <string name="refresh">Refresh</string>
    <string name="location">Location</string>
    <string name="sales_history">Sales History</string>
    <string name="quantity">Quantity</string>
    <string name="total_amount">Total Amount</string>
    <string name="check_in">Check In</string>
    <string name="transaction_detail">Transaction Detail</string>

    <string-array name="array_name">
        <item>Select</item>
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>


</resources>
