<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_widgets"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_retailer"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_distributor_list" />
        <item
            android:id="@+id/nav_sales_order"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_sales_order" />
        <item
            android:id="@+id/nav_retailer_master"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_retailer_master" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_distributor_ptr" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_retailer"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_cart" />
        </menu>
    </item>-->

</menu>
