<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_sync"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_loc"
        android:icon="@drawable/location_edit"
        android:orderInCategory="100"
        android:title="@string/location"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_LogOut"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
