<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pathak.creations.sbl.dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pathak.creations.sbl.dashboard.ui.gallery.GalleryFragment"
        android:label="@string/menu_sales_order"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pathak.creations.sbl.dashboard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_retailer_master"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="pathak.creations.sbl.dashboard.ui.tools.ToolsFragment"
        android:label="@string/menu_distributor_ptr"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="pathak.creations.sbl.dashboard.ui.share.RetailerVisit"
        android:label="@string/menu_retailer_visit"
        tools:layout="@layout/retailer_visit" >
        <action
            android:id="@+id/action_add_visit"
            app:destination="@id/sendFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

        <action
            android:id="@+id/action_edit_visit"
            app:destination="@id/editRetailerVisit"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />

    </fragment>


    <fragment
        android:id="@+id/sendFragment"
        android:name="pathak.creations.sbl.dashboard.ui.send.SendFragment"
        android:label="Add Retailer Visit" />

    <fragment
        android:id="@+id/editRetailerVisit"
        android:name="pathak.creations.sbl.dashboard.ui.share.EditRetailerVisit"
        android:label="Edit Retailer Visit" />

</navigation>