<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_logout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_logout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/delete_alert"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tv_yes"
            android:layout_below="@+id/tv_logout_message"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:text="@string/no"
            android:textColor="@color/red"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_logout_message"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:padding="3dp"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

</RelativeLayout>