<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_15sdp"
                >


                <TextView
                    android:id="@+id/tvDateMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDistributor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/distributor"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDateMain" />


                <TextView
                    android:id="@+id/tvDistributor2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:hint="@string/select_distributor_name"
                    android:maxLength="30"
                    android:padding="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvDistributor"
                    app:layout_constraintTop_toBottomOf="@id/tvDistributor" />

                <TextView
                    android:id="@+id/tvBeatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/beat_name2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDistributor2" />


                <TextView
                    android:id="@+id/tvBeatName2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:hint="@string/select_beat_name"
                    android:maxLength="30"
                    android:padding="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvBeatName"
                    app:layout_constraintTop_toBottomOf="@id/tvBeatName" />


                <TextView
                    android:id="@+id/tvRetailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/retailer2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBeatName2" />


                <TextView
                    android:id="@+id/tvRetailer2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:hint="@string/select_retailer_name"
                    android:maxLength="30"
                    android:padding="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvRetailer"
                    app:layout_constraintTop_toBottomOf="@id/tvRetailer" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/category"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRetailer2" />


                <TextView
                    android:id="@+id/tvCategory2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/round_bg"
                    android:drawableEnd="@drawable/ic_arrow_drop"
                    android:hint="@string/select_category_name"
                    android:maxLength="30"
                    android:visibility="gone"
                    android:padding="@dimen/_7sdp"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvCategory"
                    app:layout_constraintTop_toBottomOf="@id/tvCategory" />



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSubCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/cvTop"
            />

        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/button_shape"
            android:elevation="@dimen/_10sdp"
            android:paddingStart="@dimen/_35sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="Order"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvTop"/>


        <CheckBox
            android:id="@+id/cbBuyFromSBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/buy_from_sbl_shop"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvTop" />


        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_6sdp"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/capture_location"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cbBuyFromSBL" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocation" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
